--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -13,9 +13,15 @@
 
       <!-- Dropdown Menu -->
       @if(isDropdownOpen){
-      <div class="absolute right-0 mt-2 w-40 bg-white border border-stone-200 shadow-lg z-10 group-hover:block">
-        <a routerLink="/profile" class="block px-4 py-2 text-sm text-stone-800 hover:bg-stone-200">Profile</a>
-        <a (click)="logout()" class="block px-4 py-2 text-sm text-stone-800 hover:bg-stone-200">Logout</a>
+      <div
+        class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white divide-y divide-stone-100 shadow-lg ring-1 ring-black/5 focus:outline-hidden"
+        role="menu"
+        aria-orientation="vertical"
+        aria-labelledby="menu-button"
+        tabindex="-1"
+      >
+        <a routerLink="/profile" class="block w-full text-left px-4 py-2 hover:bg-stone-100 text-stone-700">Profile</a>
+        <a (click)="logout()" class="block w-full text-left px-4 py-2 hover:bg-stone-100 text-stone-700">Logout</a>
       </div>
       }
     </div>
