fixed addProduct to update the signal

--- a/src/app/pages/product-form/product-form.component.html
+++ b/src/app/pages/product-form/product-form.component.html
@@ -45,7 +45,7 @@
     >
       @for (category of categories(); track category.id) {
       <!-- <option value="0" selected>Select category</option> -->
-      <option [value]="category.id">{{ category.name }}</option>
+      <option [value]="+category.id">{{ category.name }}</option>
       }
     </select>
     <!-- <label class="block text-stone-700">Category</label>
