added user form, functions and integrated with user list design

--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -56,14 +56,14 @@
     /> -->
   </div>
 
-  <div>
+  <!-- <div>
     <label class="block text-stone-700">Status</label>
     <select formControlName="status" class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none">
       <option value="available">Available</option>
       <option value="out-of-stock">Out of Stock</option>
       <option value="archived">Archived</option>
     </select>
-  </div>
+  </div> -->
 
   <div>
     <label class="block text-stone-700">Rating</label>
