--- a/src/app/pages/users-list/users-list.component.html
+++ b/src/app/pages/users-list/users-list.component.html
@@ -1,1 +1,186 @@
-<p>users-list works!</p>
+<!-- Top Actions -->
+<div class="flex justify-between items-center mb-6">
+  <h2 class="text-2xl font-bold text-stone-800">Users</h2>
+
+  <div class="flex gap-4">
+    <div class="relative inline-block text-left">
+      <div>
+        <button
+          type="button"
+          class="bg-stone-600 hover:bg-stone-700 text-white py-2 px-4 rounded-lg flex items-center gap-1"
+          id="menu-button"
+          aria-expanded="true"
+          aria-haspopup="true"
+          (click)="toggleActions()"
+        >
+          Actions
+          <svg class="size-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+            <path
+              fill-rule="evenodd"
+              d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
+              clip-rule="evenodd"
+            />
+          </svg>
+        </button>
+      </div>
+
+      @if(showActions){
+      <div
+        class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white divide-y divide-stone-200 shadow-lg ring-1 ring-black/5 focus:outline-hidden"
+        role="menu"
+        aria-orientation="vertical"
+        aria-labelledby="menu-button"
+        tabindex="-1"
+      >
+        <div class="p-4">
+          <label class="text-sm text-stone-600">Total Selected ({{ selectedUsers.length }})</label>
+        </div>
+        <div class="py-4">
+          <label class="px-4 text-sm font-bold text-stone-500">Change Status</label>
+          <button
+            (click)="bulkChangeStatus(UserStatus.Active)"
+            class="block w-full text-left px-6 py-2 hover:bg-green-100 text-green-600"
+            [disabled]="selectedUsers.length == 0"
+          >
+            Active
+          </button>
+          <button
+            (click)="bulkChangeStatus(UserStatus.Banned)"
+            class="block w-full text-left px-6 py-2 hover:bg-rose-100 text-rose-500"
+            [disabled]="selectedUsers.length == 0"
+          >
+            Banned
+          </button>
+          <button
+            (click)="bulkChangeStatus(UserStatus.Inactive)"
+            class="block w-full text-left px-6 py-2 hover:bg-gray-100 text-gray-400"
+            [disabled]="selectedUsers.length == 0"
+          >
+            Inactive
+          </button>
+        </div>
+        <!-- <div class="py-4">
+          <button (click)="bulkDelete()" class="block w-full text-left px-4 py-2 hover:bg-stone-100 text-red-600" [disabled]="selectedUsers.length == 0">
+            Delete
+          </button>
+        </div> -->
+      </div>
+      }
+    </div>
+
+    <button class="bg-green-600 hover:bg-green-700 text-white font-medium py-2 px-4 rounded-lg" (click)="openAddModal()">New User +</button>
+  </div>
+</div>
+
+<!-- Filters -->
+<div class="flex items-center gap-4 mb-6">
+  <!-- Search -->
+  <div class="flex-1 relative">
+    <i class="bi bi-search absolute left-3 top-1/2 -translate-y-1/2 text-stone-500"></i>
+    <input
+      type="text"
+      placeholder="Search users..."
+      class="w-full pl-10 py-2 border border-stone-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-stone-400"
+      [value]="searchText()"
+      (input)="searchText.set($any($event.target).value)"
+    />
+  </div>
+  <!-- Status Filter -->
+  <!-- <div>
+    <select
+      class="p-2 border rounded border-stone-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-stone-400"
+      [value]="selectedCategoryId() || ''"
+      (change)="selectedCategoryId.set($any($event.target).value ? +$any($event.target).value : null)"
+    >
+      <option value="">All Categories</option>
+      @for (category of categories(); track category.id) {
+      <option [value]="category.id">{{ category.name }}</option>
+      }
+    </select>
+  </div> -->
+</div>
+
+<!-- Users Table -->
+<div class="overflow-x-auto rounded-lg shadow-sm">
+  <table class="min-w-full bg-white">
+    <thead class="bg-stone-100 text-stone-600 text-sm uppercase">
+      <tr>
+        <th class="p-4 text-left">
+          <label class="inline-flex items-center cursor-pointer">
+            <input type="checkbox" class="peer sr-only" [ngModel]="isAllSelected()" (ngModelChange)="toggleSelectAll($event)" />
+            <div
+              class="w-5 h-5 border-2 border-stone-300 rounded bg-white peer-checked:bg-stone-600 peer-checked:border-stone-600 flex items-center justify-center"
+            >
+              <svg class="w-3 h-3 text-white peer-checked:block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <path
+                  fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 00-1.414 0L8 12.586l-3.293-3.293a1 1 0 00-1.414 1.414l4 4a1 1 0 001.414 0l8-8a1 1 0 000-1.414z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </div>
+          </label>
+        </th>
+        <th class="p-4 text-left">Name</th>
+        <th class="p-4 text-left">Email</th>
+        <th class="p-4 text-left">Role</th>
+        <th class="p-4 text-left">Status</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody class="text-stone-700">
+      @for (user of filteredUsers(); track user.id) {
+      <tr class="border-b border-stone-400 hover:bg-stone-50">
+        <td class="p-4">
+          <label class="inline-flex items-center cursor-pointer">
+            <input type="checkbox" class="peer sr-only" [ngModel]="selectedUsers.includes(user.id)" (ngModelChange)="toggleSelection(user.id, $event)" />
+            <div
+              class="w-5 h-5 border-2 border-stone-300 rounded bg-white peer-checked:bg-stone-600 peer-checked:border-stone-600 flex items-center justify-center"
+            >
+              <svg class="w-3 h-3 text-white peer-checked:block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <path
+                  fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 00-1.414 0L8 12.586l-3.293-3.293a1 1 0 00-1.414 1.414l4 4a1 1 0 001.414 0l8-8a1 1 0 000-1.414z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </div>
+          </label>
+        </td>
+        <td class="p-4 flex items-center gap-3">
+          <img [src]="user.avatarUrl" alt="{{ user.name }}" class="w-12 h-12 rounded-full" />
+          <span>{{ user.name }}</span>
+        </td>
+        <td class="p-4 font-bold">{{ user.email }}</td>
+        <td class="p-4 font-bold">{{ user.role }}</td>
+        <td class="p-4">
+          <span
+            [ngClass]="{
+              'text-green-600': user.status === 'active',
+              'text-rose-500': user.status === 'banned',
+              'text-gray-400': user.status === 'inactive'
+            }"
+            class="font-medium"
+          >
+            {{ user.status | titlecase }}
+          </span>
+        </td>
+        <td class="p-4">
+          <i class="bi bi-pencil-fill text-amber-500 cursor-pointer" (click)="openEditModal(user)"></i>
+        </td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
+
+<!-- Modal -->
+@if (modalOpen){
+<div class="fixed inset-0 bg-black/50 flex items-center justify-center z-50">
+  <div class="bg-white rounded-lg shadow-lg w-full max-w-2xl p-6 relative">
+    <button (click)="closeModal()" class="absolute top-2 right-2 text-stone-500 hover:text-stone-800">✖</button>
+
+    <app-user-form [user]="selectedUser" (formSubmit)="handleFormSubmit($event)"></app-user-form>
+  </div>
+</div>
+}
