--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -12,10 +12,10 @@
       <i class="bi bi-box-fill text-xl mx-2"></i>
       <span class="text-lg">Products</span>
     </a>
-    <a routerLink="/orders" routerLinkActive="bg-stone-500" class="block px-4 py-2 rounded hover:bg-stone-500">
+    <!-- <a routerLink="/orders" routerLinkActive="bg-stone-500" class="block px-4 py-2 rounded hover:bg-stone-500">
       <i class="bi bi-cart-fill text-xl mx-2"></i>
       <span class="text-lg">Orders</span>
-    </a>
+    </a> -->
     <a routerLink="/users" routerLinkActive="bg-stone-500" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-stone-500">
       <i class="bi bi-person-fill text-xl mx-2"></i>
       <span class="text-lg">Users</span>
