--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<div class="p-6">
+  <h2 class="text-2xl font-bold mb-4">Dashboard</h2>
+  <app-chart [chartType]="type" [chartData]="data"></app-chart>
+</div>
