--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,42 @@
-<div class="p-6">
-  <h2 class="text-2xl font-bold mb-4">Dashboard</h2>
+<div>
+  <h2 class="text-2xl font-bold mb-2 text-stone-700">Dashboard</h2>
+  <h2 class="text-xl text-stone-400">{{ today | date : "fullDate" }}</h2>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
+    <!-- Total Products Card -->
+    <div class="bg-stone-100 p-6 rounded-2xl shadow-md flex flex-col">
+      <div class="flex items-center gap-2 mb-2">
+        <div class="bg-stone-300 rounded-full p-2 px-3 shadow-sm">
+          <i class="bi bi-box-fill text-stone-600 text-xl"></i>
+        </div>
+        <h3 class="text-lg font-semibold text-stone-700 mb-0">Total Products</h3>
+      </div>
+      <p class="text-3xl font-semibold text-stone-500 text-center">{{ totalProducts }}</p>
+    </div>
+
+    <!-- Total Users Card -->
+    <div class="bg-stone-100 p-6 rounded-2xl shadow-md flex flex-col">
+      <div class="flex items-center gap-2 mb-2">
+        <div class="bg-stone-300 rounded-full p-2 px-3 shadow-sm">
+          <i class="bi bi-grid-fill text-stone-600 text-xl"></i>
+        </div>
+        <h3 class="text-lg font-semibold text-stone-700 mb-0">Total Categories</h3>
+      </div>
+      <p class="text-3xl font-semibold text-stone-500 text-center">{{ totalCategories }}</p>
+    </div>
+
+    <!-- Total Categories Card -->
+    <div class="bg-stone-100 p-6 rounded-2xl shadow-md flex flex-col">
+      <div class="flex items-center gap-2 mb-2">
+        <div class="bg-stone-300 rounded-full p-2 px-3 shadow-sm">
+          <i class="bi bi-people-fill text-stone-600 text-xl"></i>
+        </div>
+        <h3 class="text-lg font-semibold text-stone-700 mb-0">Total Users</h3>
+      </div>
+      <p class="text-3xl font-semibold text-stone-500 text-center">{{ totalUsers }}</p>
+    </div>
+  </div>
   <app-chart [chartType]="type" [chartData]="data"></app-chart>
+  <!-- <div class="flex gap-4">
+    <app-chart [chartType]="type" [chartData]="data"></app-chart>
+  </div> -->
 </div>
