added low stock and out of stock products in dashboard

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -4,11 +4,11 @@
 
   <!-- Navigation Links -->
   <nav class="flex-1 p-4 space-y-2">
-    <a routerLink="/dashboard" routerLinkActive="bg-stone-500" class="block px-4 py-2 rounded hover:bg-stone-500">
+    <a routerLink="/dashboard" routerLinkActive="bg-stone-500" class="block px-4 py-2 rounded hover:bg-stone-500 transition-transform hover:scale-103">
       <i class="bi bi-grid-1x2-fill mx-2"></i>
       <span class="text-lg">Dashboard</span>
     </a>
-    <a routerLink="/products" routerLinkActive="bg-stone-500" class="block px-4 py-2 rounded hover:bg-stone-500">
+    <a routerLink="/products" routerLinkActive="bg-stone-500" class="block px-4 py-2 rounded hover:bg-stone-500 transition-transform hover:scale-103">
       <i class="bi bi-box-fill text-xl mx-2"></i>
       <span class="text-lg">Products</span>
     </a>
@@ -16,7 +16,11 @@
       <i class="bi bi-cart-fill text-xl mx-2"></i>
       <span class="text-lg">Orders</span>
     </a> -->
-    <a routerLink="/users" routerLinkActive="bg-stone-500" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-stone-500">
+    <a
+      routerLink="/users"
+      routerLinkActive="bg-stone-500"
+      class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-stone-500 transition-transform hover:scale-103"
+    >
       <i class="bi bi-person-fill text-xl mx-2"></i>
       <span class="text-lg">Users</span>
     </a>
