--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,5 +1,5 @@
-<div class="mt-6 p-6 bg-stone-100 rounded-2xl shadow-md">
-  <h2 class="text-xl font-bold mb-4 text-stone-700">{{ chartData.datasets[0].label }}</h2>
+<div class="mt-5 p-6 bg-slate-100 rounded-2xl shadow-md">
+  <h2 class="text-xl font-bold mb-2 text-slate-700">{{ chartData.datasets[0].label }}</h2>
   <div class="w-full h-64">
     <canvas class="mx-auto" id="myChart"></canvas>
   </div>
