--- a/src/app/components/product-form/product-form.component.html
+++ b/src/app/components/product-form/product-form.component.html
@@ -1,64 +1,64 @@
 <form [formGroup]="productForm" (ngSubmit)="submit()" class="space-y-4">
   <div>
-    <label class="block text-stone-700">Name</label>
+    <label class="block text-slate-700">Name</label>
     <input
       formControlName="name"
       type="text"
-      class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none;"
+      class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none;"
     />
   </div>
 
   <div>
-    <label class="block text-stone-700">Description</label>
+    <label class="block text-slate-700">Description</label>
     <textarea
       formControlName="description"
-      class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none;"
+      class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none;"
     ></textarea>
   </div>
 
   <div class="grid grid-cols-2 gap-4">
     <div>
-      <label class="block text-stone-700">Price</label>
+      <label class="block text-slate-700">Price</label>
       <input
         formControlName="price"
         type="number"
-        class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none;"
+        class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none;"
       />
     </div>
 
     <div>
-      <label class="block text-stone-700">Stock</label>
+      <label class="block text-slate-700">Stock</label>
       <input
         formControlName="stock"
         type="number"
-        class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none;"
+        class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none;"
       />
     </div>
   </div>
 
   <div>
-    <label for="categoryId" class="block text-stone-700">Category</label>
+    <label for="categoryId" class="block text-slate-700">Category</label>
     <select
       id="categoryId"
       formControlName="category"
-      class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none"
+      class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none"
     >
       @for (category of categories(); track category.id) {
       <!-- <option value="0" selected>Select category</option> -->
       <option [value]="+category.id">{{ category.name }}</option>
       }
     </select>
-    <!-- <label class="block text-stone-700">Category</label>
+    <!-- <label class="block text-slate-700">Category</label>
     <input
       formControlName="category"
       type="text"
-      class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none;"
+      class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none;"
     /> -->
   </div>
 
   <!-- <div>
-    <label class="block text-stone-700">Status</label>
-    <select formControlName="status" class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none">
+    <label class="block text-slate-700">Status</label>
+    <select formControlName="status" class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none">
       <option value="available">Available</option>
       <option value="out-of-stock">Out of Stock</option>
       <option value="archived">Archived</option>
@@ -66,26 +66,26 @@
   </div> -->
 
   <div>
-    <label class="block text-stone-700">Rating</label>
+    <label class="block text-slate-700">Rating</label>
     <input
       formControlName="rating"
       type="number"
       step="0.1"
-      class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none"
+      class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none"
     />
   </div>
 
   <div>
-    <label class="block text-stone-700">Image URL</label>
+    <label class="block text-slate-700">Image URL</label>
     <input
       formControlName="imageUrl"
       type="text"
-      class="input w-full rounded border border-stone-300 p-2 focus:border-stone-500 focus:ring-stone-500 focus:outline-none"
+      class="input w-full rounded border border-slate-300 p-2 focus:border-slate-500 focus:ring-slate-500 focus:outline-none"
     />
   </div>
 
   <div class="flex justify-end">
-    <button type="submit" class="bg-stone-700 text-white px-6 py-2 rounded hover:bg-stone-800">
+    <button type="submit" class="bg-slate-700 text-white px-6 py-2 rounded hover:bg-slate-800">
       {{ product() ? "Update Product" : "Add Product" }}
     </button>
   </div>
