--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,27 +1,27 @@
-<nav class="bg-stone-100 text-stone-800 px-6 py-4 flex justify-between items-center shadow-md">
+<nav class="bg-slate-50 text-slate-800 px-6 py-4 flex justify-between items-center shadow-md">
   <div class="flex items-center ml-auto space-x-4">
     <div class="flex items-center space-x-2">
       <img class="w-8 h-8 rounded-full" src="https://randomuser.me/api/portraits/men/41.jpg" alt="User Avatar" />
-      <span class="text-sm text-stone-800">John Doe</span>
+      <span class="text-sm text-slate-800">John Doe</span>
     </div>
     <!-- Dropdown Button -->
     <div class="relative">
-      <button class="text-sm text-stone-800 focus:outline-none" (click)="toggleDropdown()">
-        <i class="bi bi-chevron-down text-stone-800 text-lg"></i>
+      <button class="text-sm text-slate-800 focus:outline-none" (click)="toggleDropdown()">
+        <i class="bi bi-chevron-down text-slate-800 text-lg"></i>
         <!-- Dropdown Icon -->
       </button>
 
       <!-- Dropdown Menu -->
       @if(isDropdownOpen){
       <div
-        class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white divide-y divide-stone-100 shadow-lg ring-1 ring-black/5 focus:outline-hidden"
+        class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white divide-y divide-slate-100 shadow-lg ring-1 ring-black/5 focus:outline-hidden"
         role="menu"
         aria-orientation="vertical"
         aria-labelledby="menu-button"
         tabindex="-1"
       >
-        <a routerLink="/profile" class="block w-full text-left px-4 py-2 hover:bg-stone-100 text-stone-700">Profile</a>
-        <a (click)="logout()" class="block w-full text-left px-4 py-2 hover:bg-stone-100 text-stone-700">Logout</a>
+        <a routerLink="/profile" class="block w-full text-left px-4 py-2 hover:bg-slate-100 text-slate-700">Profile</a>
+        <a (click)="logout()" class="block w-full text-left px-4 py-2 hover:bg-slate-100 text-slate-700">Logout</a>
       </div>
       }
     </div>
