--- a/src/app/pages/users-list/users-list.component.html
+++ b/src/app/pages/users-list/users-list.component.html
@@ -1,13 +1,13 @@
 <!-- Top Actions -->
 <div class="flex justify-between items-center mb-6">
-  <h2 class="text-2xl font-bold text-stone-700">Users</h2>
+  <h2 class="text-2xl font-bold text-slate-700">Users</h2>
 
   <div class="flex gap-4">
     <div class="relative inline-block text-left">
       <div>
         <button
           type="button"
-          class="bg-stone-600 hover:bg-stone-700 text-white py-2 px-4 rounded-lg flex items-center gap-1"
+          class="bg-slate-600 hover:bg-slate-700 text-white py-2 px-4 rounded-lg flex items-center gap-1"
           id="menu-button"
           aria-expanded="true"
           aria-haspopup="true"
@@ -26,17 +26,17 @@
 
       @if(showActions){
       <div
-        class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white divide-y divide-stone-200 shadow-lg ring-1 ring-black/5 focus:outline-hidden"
+        class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white divide-y divide-slate-200 shadow-lg ring-1 ring-black/5 focus:outline-hidden"
         role="menu"
         aria-orientation="vertical"
         aria-labelledby="menu-button"
         tabindex="-1"
       >
         <div class="p-4">
-          <label class="text-sm text-stone-600">Total Selected ({{ selectedUsers.length }})</label>
+          <label class="text-sm text-slate-600">Total Selected ({{ selectedUsers.length }})</label>
         </div>
         <div class="py-4">
-          <label class="px-4 text-sm font-bold text-stone-500">Change Status</label>
+          <label class="px-4 text-sm font-bold text-slate-500">Change Status</label>
           <button
             (click)="bulkChangeStatus(UserStatus.Active)"
             class="block w-full text-left px-6 py-2 hover:bg-green-100 text-green-600"
@@ -60,7 +60,7 @@
           </button>
         </div>
         <!-- <div class="py-4">
-          <button (click)="bulkDelete()" class="block w-full text-left px-4 py-2 hover:bg-stone-100 text-red-600" [disabled]="selectedUsers.length == 0">
+          <button (click)="bulkDelete()" class="block w-full text-left px-4 py-2 hover:bg-slate-100 text-red-600" [disabled]="selectedUsers.length == 0">
             Delete
           </button>
         </div> -->
@@ -76,11 +76,11 @@
 <div class="flex items-center gap-4 mb-6">
   <!-- Search -->
   <div class="flex-1 relative">
-    <i class="bi bi-search absolute left-3 top-1/2 -translate-y-1/2 text-stone-500"></i>
+    <i class="bi bi-search absolute left-3 top-1/2 -translate-y-1/2 text-slate-500"></i>
     <input
       type="text"
       placeholder="Search users..."
-      class="w-full pl-10 py-2 border border-stone-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-stone-400"
+      class="w-full pl-10 py-2 border border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-slate-400"
       [value]="searchText()"
       (input)="searchText.set($any($event.target).value)"
     />
@@ -88,7 +88,7 @@
   <!-- Status Filter -->
   <!-- <div>
     <select
-      class="p-2 border rounded border-stone-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-stone-400"
+      class="p-2 border rounded border-slate-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-slate-400"
       [value]="selectedCategoryId() || ''"
       (change)="selectedCategoryId.set($any($event.target).value ? +$any($event.target).value : null)"
     >
@@ -103,13 +103,13 @@
 <!-- Users Table -->
 <div class="overflow-x-auto rounded-lg shadow-sm">
   <table class="min-w-full bg-white">
-    <thead class="bg-stone-100 text-stone-600 text-sm uppercase">
+    <thead class="bg-slate-100 text-slate-600 text-sm uppercase">
       <tr>
         <th class="p-4 text-left">
           <label class="inline-flex items-center cursor-pointer">
             <input type="checkbox" class="peer sr-only" [ngModel]="isAllSelected()" (ngModelChange)="toggleSelectAll($event)" />
             <div
-              class="w-5 h-5 border-2 border-stone-300 rounded bg-white peer-checked:bg-stone-600 peer-checked:border-stone-600 flex items-center justify-center"
+              class="w-5 h-5 border-2 border-slate-300 rounded bg-white peer-checked:bg-slate-600 peer-checked:border-slate-600 flex items-center justify-center"
             >
               <svg class="w-3 h-3 text-white peer-checked:block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                 <path
@@ -128,14 +128,14 @@
         <th></th>
       </tr>
     </thead>
-    <tbody class="text-stone-700">
+    <tbody class="text-slate-700">
       @for (user of filteredUsers(); track user.id) {
-      <tr class="border-b border-stone-400 hover:bg-stone-50">
+      <tr class="border-b border-slate-400 hover:bg-slate-50">
         <td class="p-4">
           <label class="inline-flex items-center cursor-pointer">
             <input type="checkbox" class="peer sr-only" [ngModel]="selectedUsers.includes(user.id)" (ngModelChange)="toggleSelection(user.id, $event)" />
             <div
-              class="w-5 h-5 border-2 border-stone-300 rounded bg-white peer-checked:bg-stone-600 peer-checked:border-stone-600 flex items-center justify-center"
+              class="w-5 h-5 border-2 border-slate-300 rounded bg-white peer-checked:bg-slate-600 peer-checked:border-slate-600 flex items-center justify-center"
             >
               <svg class="w-3 h-3 text-white peer-checked:block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                 <path
@@ -178,7 +178,7 @@
 @if (modalOpen){
 <div class="fixed inset-0 bg-black/50 flex items-center justify-center z-50">
   <div class="bg-white rounded-lg shadow-lg w-full max-w-2xl p-6 relative">
-    <button (click)="closeModal()" class="absolute top-2 right-2 text-stone-500 hover:text-stone-800">✖</button>
+    <button (click)="closeModal()" class="absolute top-2 right-2 text-slate-500 hover:text-slate-800">✖</button>
 
     <app-user-form [user]="selectedUser" (formSubmit)="handleFormSubmit($event)"></app-user-form>
   </div>
